tests/k8s_testcases/network-policy-checks-bad-path/ports_wrong_keys.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-or-ingress-ports-test-keys
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: helm
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: frontend
    - from:
      - podSelector:
          matchLabels:
            tier: frontend
      # wrong keys:
      ports:
        - podSelector: {}
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              unique-label: dummy
